--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,18 @@ jobs:
   build:
       strategy:
         matrix:
-          dotnet-version: [ '2.2.x' ]
+          dotnet-version: [ '3.1.x' ]
           type: [unitarias]
       runs-on: windows-latest
       steps:
         - uses: actions/checkout@v2
+        - name: Setup dotnet
+          uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: '3.1.x'
+        - name: Install dependencies
+          run: dotnet restore
+        - name: Build
+          run: dotnet build
+        - name: Test with the dotnet CLI
+          run: dotnet test
