--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           with:
             dotnet-version: '2.2.x'
         - name: Install dependencies
-          run: dotnet restore
+          run: dotnet restore $env:Solution_Name
         - name: Build
           run: dotnet build
         - name: Test with the dotnet CLI
