--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,4 @@ jobs:
         - name: Build
           run: dotnet build $env:Wap_Project_Path
         - name: Test with the dotnet CLI
-        
-          run: dotnet test $env:Test_Project_Path --no-restore --logger trx --results-directory "src\TestProject1\TestResults-${{ matrix.dotnet-version }}"
-          env:
-             Configuration: ${{ matrix.configuration }} 
-        #upload test result
-        - name: Upload dotnet test results
-          uses: actions/upload-artifact@v2
-          with:
-           name: dotnet-results-${{ matrix.dotnet-version }}
-           path: src\TestProject1\TestResults-${{ matrix.dotnet-version }}
-              # Use always() to always run this step to publish test results when there are test failures
-          if: ${{ always() }}
+          run: dotnet test $env:Test_Project_Path
