--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           Test_Project_Path: src\TestProject1\TestProject1.csproj       # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.      
           Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj                  # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
           working_directory: src\WebApplicationDGP
-          test_result_path: src\TestProject1\TestResults-${{ matrix.dotnet-version }}
+          test_result_path: src\TestProject1\TestResults
 
           
       steps:
@@ -38,4 +38,4 @@ jobs:
         - name: Build
           run: dotnet build $env:Wap_Project_Path
         - name: Test with the dotnet CLI
-          run: dotnet test $env:Test_Project_Path
+          run: dotnet test $env:Test_Project_Path --no-restore --logger trx --results-directory $env:test_result_path
