--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,9 @@ jobs:
         - name: Test with the dotnet CLI
           run: dotnet test $env:Test_Project_Path --logger trx --results-directory $env:test_result_path
  # Using the trx-parser action
-        - name: Parse Trx files
-          uses: NasAmin/trx-parser@v0.1
+        - name: trx-parser
+          uses: NasAmin/trx-parser@v0.2.0
           id: trx-parser
           with:
             TRX_PATH: ${{ github.workspace }} src/TestProject1/TestResults #This should be the path to your TRX files
-            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
