--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,15 +58,7 @@ jobs:
         - name: Login via Az module
           uses: azure/login@v1
           with:
-            creds: ${{secrets.AZURE_CREDENTIALS}}
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-        - name: Run Az CLI script
-          run: |
+        - run: |
             az webapp list --query "[?state=='Running']"
-
-        - name: Run Azure PowerShell script
-          uses: azure/powershell@v1
-          with:
-            azPSVersion: '3.1.0'
-            inlineScript: |
-              Get-AzVM -ResourceGroupName "ActionsDemo"
