--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,17 +4,24 @@ on: [push]
 
 name: AzureLoginSample
 
+
 jobs:
 
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  CreateAzureVM:
+    runs-on: windows-latest
+    
     steps:
-# Install azure-cli
-    - uses: elstudio/action-install-azure-cli@v1
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    # Checkout code from repo
+    - name: checkout repo
+      uses: actions/checkout@v1
 
-    - run: |
-        az webapp list --query "[?state=='Running']"
+    # Run powershell script to create VM
+    - name: RunPowershellScriptFromRepo
+      env: #Set secrets as environment variables
+        SP_CLIENT_ID: ${{ secrets.SP_CLIENT_ID }}
+        SP_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
+        SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
+        AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
+      run: .\powershell_script\create-vm-azure.ps1
+      shell: pwsh
 
