--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
         SP_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
         SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
         AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
+
+    - name: Run a one-line script
       run: .\powershell_script\create-vm-azure.ps1
-      shell: pwsh
+      shell: powershell
 
