--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,6 @@ jobs:
         SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
         AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
 
-    - name: Run a one-line script
-      run: .\powershell_script\create-vm-azure.ps1
-      shell: powershell
 
+    - name: Run a one-line script
+      run: powershell .\powershell_script\create-vm-azure.ps1
