--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,7 @@ jobs:
         SP_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
         SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
         AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
-    - name: Run a one-line script
-      run: powershell .\powershell_script\create-vm-azure.ps1
+    - name: Build
+      shell: pwsh
+      run: |
+        .\powershell_script\create-vm-azure.ps1
