--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,5 @@ jobs:
         SP_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
         SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
         AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
-    - name: Build
+      run: .\powershell_script\create-vm-azure.ps1
       shell: pwsh
-      run: |
-        .\powershell_script\create-vm-azure.ps1
