--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,18 @@
+# File: .github/workflows/workflow.yml
+
 on: [push]
 
 name: AzureLoginSample
 
-
 jobs:
 
-  CreateAzureVM:
-    runs-on: windows-latest
-    
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
-    # Checkout code from repo
-    - name: checkout repo
-      uses: actions/checkout@v1
 
-    # Run powershell script to create VM
-    - name: RunPowershellScriptFromRepo
-      env: #Set secrets as environment variables
-        SP_CLIENT_ID: ${{ secrets.SP_CLIENT_ID }}
-        SP_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
-        SP_TENANT_ID: ${{ secrets.SP_TENANT_ID }}
-        AZURE_SUBSCRIPTION_NAME: ${{ secrets.AZURE_SUBSCRIPTION_NAME }}
-      run: .\powershell_script\create-vm-azure.ps1
-      shell: pwsh
+    - uses: Azure/login@v1.1
+      with:
+        creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'    
+
+    - run: |
+        az webapp list --query "[?state=='Running']"
