--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,38 @@
-# File: .github/workflows/workflow.yml
+on:
+  push:
+    branches:
+      - main
 
-on: [push]
-
-name: AzurePowerShellLoginSample
+env:
+  AZURE_WEBAPP_NAME: uksouth-iflx-shar-auth-WebApplicationDGP-app   # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
-  build-and-deploy-to-dev:
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
-    environment: dev
-    steps:
-    - uses: actions/checkout@master
-            
-   # Authentication
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS  }}
-    - run: |
-        Get-AzVM -ResourceGroupName "ResourceGroup11"
-        
+    environment: production
 
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: npm install, build, and test
+        run: |
+          # Build and test the project, then
+          # deploy to Azure Web App.
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: 'Deploy to Azure WebApp'
+        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
