--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
           working_directory: src\WebApplicationDGP
           test_result_path: src\TestProject1\TestResults
           AZURE_WEBAPP_NAME: uksouth-iflx-shar-auth-WebApplicationDGP-app   # set this to your application's name
-          AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-          NODE_VERSION: '10.x'                # set this to the node version to use
+          AZURE_WEBAPP_PACKAGE_PATH: 'src\WebApplicationDGP\bin\Debug\netcoreapp3.1\publish\'      # set this to the path to your web app project, defaults to the repository root
           
 
           
