--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,9 @@ jobs:
           run: dotnet restore $env:Wap_Project_Path
         - name: Build
           run: dotnet build $env:Wap_Project_Path
-  test:        
+  test:
+      runs-on: windows-latest
+      needs: build
         - name: Test with the dotnet CLI
           run: dotnet test $env:Test_Project_Path --logger trx --results-directory $env:test_result_path
  # Using the trx-parser action
@@ -51,6 +53,8 @@ jobs:
             TRX_PATH: ${{ github.workspace }}/src/TestProject1/TestResults #This should be the path to your TRX files
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ArtifactGenerate:
+      runs-on: windows-latest
+      needs: build
         - name: Publish
           run: dotnet publish $env:Wap_Project_Path         
         - name: Upload WebApp Build Artifact
@@ -59,6 +63,8 @@ jobs:
             name: WebAppDGP
             path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
   UploadToAzure:
+      runs-on: windows-latest
+      needs: build  
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
