--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
   test:
       runs-on: windows-latest
       needs: build
+      steps:
         - name: Test with the dotnet CLI
           run: dotnet test $env:Test_Project_Path --logger trx --results-directory $env:test_result_path
  # Using the trx-parser action
@@ -55,6 +56,7 @@ jobs:
   ArtifactGenerate:
       runs-on: windows-latest
       needs: build
+      steps:
         - name: Publish
           run: dotnet publish $env:Wap_Project_Path         
         - name: Upload WebApp Build Artifact
@@ -64,7 +66,8 @@ jobs:
             path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
   UploadToAzure:
       runs-on: windows-latest
-      needs: build  
+      needs: build
+      steps:
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
