--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,12 @@ jobs:
         - name: Build
           run: dotnet build $env:Wap_Project_Path
   test:
-      strategy:
-        matrix:
-          dotnet-version: [ '3.1.x' ]
-          type: [unitarias]
+
       runs-on: windows-latest
+      needs: build
 
       steps:
+        - uses: actions/checkout@v2
         - name: Test with the dotnet CLI
           run: dotnet test src\TestProject1\TestProject1.csproj --logger trx --results-directory src\TestProject1\TestResults
  # Using the trx-parser action
