--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,9 @@ jobs:
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ArtifactGenerate:
       runs-on: windows-latest
-      needs: build
+      needs: [build,test]
       steps:
+        - uses: actions/checkout@v2
         - name: Publish
           run: dotnet publish $env:Wap_Project_Path         
         - name: Upload WebApp Build Artifact
@@ -69,8 +70,9 @@ jobs:
             path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
   UploadToAzure:
       runs-on: windows-latest
-      needs: build
+      needs: ArtifactGenerate
       steps:
+        - uses: actions/checkout@v2
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
