--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,10 +59,12 @@ jobs:
   ArtifactGenerate:
       runs-on: windows-latest
       needs: [build,test]
+      env:
+          Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj  
       steps:
         - uses: actions/checkout@v2
         - name: Publish
-          run: dotnet publish $env:Wap_Project_Path         
+          run: dotnet publish $env:Wap_Project_Path     
         - name: Upload WebApp Build Artifact
           uses: actions/upload-artifact@v2
           with:
