--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,4 +83,4 @@ jobs:
           with:
             app-name: ${{ env.AZURE_WEBAPP_NAME_DEV }}
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
-            package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/src/WebApplicationDGP'
+            package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/src'
