--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }} 
+          dotnet-version: '3.1.x'
       
       # Run dotnet build and publish
       - name: dotnet build and publish
         run: |
-          dotnet restore
+          dotnet restore src\WebApplicationDGP/WebApplicationDGP.csproj
           dotnet build --configuration Release
           dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
           
