--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,12 @@ jobs:
             TRX_PATH: ${{ github.workspace }}/src/TestProject1/TestResults #This should be the path to your TRX files
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ArtifactGenerate:
+      runs-on: windows-latest
+      needs: [build,test]
+      env:
+          Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj  
+      steps:
+        - uses: actions/checkout@v2
         - name: Publish
           run: dotnet publish $env:Wap_Project_Path     
         - name: Upload WebApp Build Artifact
@@ -64,7 +70,14 @@ jobs:
           with:
             name: WebAppDGP
             path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
-  UploadToAzure:
+  DelpoyToDEV:
+      runs-on: windows-latest
+      needs: ArtifactGenerate
+      env:
+          AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
+          AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+      steps:
+        - uses: actions/checkout@v2
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
