--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           run: dotnet restore $env:Wap_Project_Path
         - name: Build
           run: dotnet build $env:Wap_Project_Path
-  test:
+  testCore:
 
       runs-on: windows-latest
       needs: build
@@ -58,7 +58,7 @@ jobs:
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ArtifactGenerate:
       runs-on: windows-latest
-      needs: [build,test]
+      needs: [build,testCore]
       env:
           Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj  
       steps:
@@ -84,7 +84,7 @@ jobs:
             app-name: ${{ env.AZURE_WEBAPP_NAME_DEV }}
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
             package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/src/WebApplicationDGP'
-  testCORE:
+  testFuncionales:
 
       runs-on: windows-latest
       needs: DelpoyToDEV
@@ -92,17 +92,17 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - name: Test with the dotnet CLI
-          run: dotnet test src\TestProject1\TestProject1.csproj --logger trx --results-directory src\TestProject1\TestResults
+          run: dotnet test src\TestProject1\TestProject2.csproj --logger trx --results-directory src\TestProject1\TestResults
  # Using the trx-parser action
         - name: trx-parser
           uses: NasAmin/trx-parser@v0.2.0
           id: trx-parser
           with:
-            TRX_PATH: ${{ github.workspace }}/src/TestProject1/TestResults #This should be the path to your TRX files
+            TRX_PATH: ${{ github.workspace }}/src/TestProject2/TestResults #This should be the path to your TRX files
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}            
   DelpoyToQA:
       runs-on: windows-latest
-      needs: [DelpoyToDEV,testCORE]
+      needs: [DelpoyToDEV,testFuncionales]
       env:
           AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-qa-app   # set this to your application's name
           AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
