--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,8 @@ jobs:
           Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj                  # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
           working_directory: src\WebApplicationDGP
           test_result_path: src\TestProject1\TestResults
-          
+          AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
+          AZURE_WEBAPP_PACKAGE_PATH: 'src\WebApplicationDGP\bin\Debug\netcoreapp3.1\publish\'      # set this to the path to your web app project, defaults to the repository root
           
 
           
@@ -39,30 +40,23 @@ jobs:
           run: dotnet restore $env:Wap_Project_Path
         - name: Build
           run: dotnet build $env:Wap_Project_Path
-  
-  ArtifactGenerate:
-      runs-on: windows-latest
-      needs: [build,testCore]
-      env:
-          Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj  
-      steps:
-        - uses: actions/checkout@v2
+        - name: Test with the dotnet CLI
+          run: dotnet test $env:Test_Project_Path --logger trx --results-directory $env:test_result_path
+ # Using the trx-parser action
+        - name: trx-parser
+          uses: NasAmin/trx-parser@v0.2.0
+          id: trx-parser
+          with:
+            TRX_PATH: ${{ github.workspace }}/src/TestProject1/TestResults #This should be the path to your TRX files
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         - name: Publish
-          run: dotnet publish $env:Wap_Project_Path     
+          run: dotnet publish $env:Wap_Project_Path         
         - name: Upload WebApp Build Artifact
           uses: actions/upload-artifact@v2
           with:
             name: WebAppDGP
             path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
-  DelpoyToDEV:
-      runs-on: windows-latest
-      needs: ArtifactGenerate
-      env:
-          AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
-          AZURE_WEBAPP_PACKAGE_PATH: 'src\WebApplicationDGP\bin\Debug\netcoreapp3.1\publish\'      # set this to the path to your web app project, defaults to the repository root
-
-      steps:
-        - uses: actions/checkout@v2
+            
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
