--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,8 @@ jobs:
       env:
           AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
           AZURE_WEBAPP_PACKAGE_PATH: 'src\WebApplicationDGP\bin\Debug\netcoreapp3.1\publish\'      # set this to the path to your web app project, defaults to the repository root
-
+      
+      steps:
         - name: 'Deploy to Azure WebApp'
           uses: azure/webapps-deploy@v2
           with:
