--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
   DeployDEV:
     
       runs-on: windows-latest
-      needs: build
+      needs: ArtifactGenerate
 
       env:
           AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
@@ -112,3 +112,29 @@ jobs:
           with:
             TRX_PATH: ${{ github.workspace }}/src/TestProject2/TestResults #This should be the path to your TRX files
             REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  DeployQA:
+    
+      runs-on: windows-latest
+      needs: [DeployDEV,testFuncionales]
+
+      env:
+          AZURE_WEBAPP_NAME_QA: uksouth-iflx-shar-WebApplicationDGP-qa-app   # set this to your application's name
+          AZURE_WEBAPP_PACKAGE_PATH: 'src/WebApplicationDGP/path/to/artifact/'      # set this to the path to your web app project, defaults to the repository root
+      
+      steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: DownloadArtifact
+        uses: actions/download-artifact@v2
+        with:
+          name: WebAppDGP
+          path: src/WebApplicationDGP/path/to/artifact
+
+      - name: 'Deploy to Azure WebApp'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME_QA }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}            
