--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,6 +143,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: DeployQA
     steps:
       - name: Create GitHub release
         uses: Roang-zero1/github-create-release-action@master
