--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,75 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-# run: dotnet test $env:Test_Project_Path --no-restore --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
-
-name: WorkFlow CI
-
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: '*'
   pull_request:
-    branches: [ main ]
-    
+    branches: '*'
 
 jobs:
   build:
-      strategy:
-        matrix:
-          dotnet-version: [ '3.1.x' ]
-          type: [unitarias]
-      runs-on: windows-latest
-      
-      env:
-          Solution_Name: src\WebApplicationDGP.sln
-          Test_Project_Path: src\TestProject1\TestProject1.csproj       # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.      
-          Wap_Project_Path: src\WebApplicationDGP/WebApplicationDGP.csproj                  # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
-          working_directory: src\WebApplicationDGP
-          test_result_path: src\TestProject1\TestResults
-       
-          
-
-          
-      steps:
-        - uses: actions/checkout@v2
-        - name: Setup dotnet
-          uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: '3.1.x'
-        - name: Install dependencies
-          run: dotnet restore $env:Wap_Project_Path
-        - name: Build
-          run: dotnet build $env:Wap_Project_Path
-        
-        - name: Publish
-          run: dotnet publish $env:Wap_Project_Path         
-        - name: Upload WebApp Build Artifact
-          uses: actions/upload-artifact@v2
-          with:
-            name: WebAppDGP
-            path: src/WebApplicationDGP/bin/Debug/netcoreapp3.1/publish/
-  Deploy:
-    
-      runs-on: windows-latest
-      needs: build
-
-      env:
-          AZURE_WEBAPP_NAME_DEV: uksouth-iflx-shar-WebApplicationDGP-dev-app   # set this to your application's name
-          AZURE_WEBAPP_PACKAGE_PATH: 'src/WebApplicationDGP/path/to/artifact/'      # set this to the path to your web app project, defaults to the repository root
-      
-      steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: DownloadArtifact
-        uses: actions/download-artifact@v2
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Tag and prepare release
+        id: tag_and_prepare_release
+        uses: K-Phoen/semver-release-action@master
         with:
-          name: WebAppDGP
-          path: src/WebApplicationDGP/path/to/artifact
-
-      - name: 'Deploy to Azure WebApp'
-        uses: azure/webapps-deploy@v2
+          release_branch: master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload release notes
+        if: steps.tag_and_prepare_release.outputs.tag
+        uses: Roang-zero1/github-create-release-action@master
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME_DEV }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          created_tag: ${{ steps.tag_and_prepare_release.outputs.tag }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
